--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">SWA</string>
-
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="background_desc">Background Image</string>
+    <string name="letter_prompt">What letter does it start with?</string>
+    <string name="word_desc_prompt">What are some similar words?</string>
+    <string name="button_msg">Get the word</string>
 </resources>
